hphp/test/zend/good/ext/mcrypt/tests/mcrypt_module_get_supported_key_sizes.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("mcrypt")) print "skip";
}
