hphp/test/zend/bad/ext/pgsql/tests/09notice.php.skipif
<?php

include("skipif.inc");

_skip_lc_messages();

?>